--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.2",
     "firebase": "^7.19.1",
+    "moment": "^2.28.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-google-maps": "^9.4.5",
+    "react-icons": "^3.11.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "sweetalert2": "^10.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
