--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@wellyshen/use-web-animations": "^0.5.3",
+    "animate.css": "^4.1.1",
     "bootstrap": "^4.5.2",
     "firebase": "^7.19.1",
     "moment": "^2.28.0",
     "react": "^16.13.1",
+    "react-animated-css": "^1.2.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-google-maps": "^9.4.5",
@@ -21,7 +24,7 @@
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
-    "sweetalert2": "^10.0.2"
+    "sweetalert2-react": "^0.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
