--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "sweetalert2": "^10.3.5",
     "sweetalert2-react": "^0.8.3"
   },
   "scripts": {
