--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.2.1",
     "@wellyshen/use-web-animations": "^0.5.3",
     "animate.css": "^4.1.1",
+    "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "firebase": "^7.22.0",
     "moment": "^2.28.0",
